fix: change margin-bottom on gap style properties[WTEL-3683]

--- a/src/assets/css/auth/auth.scss
+++ b/src/assets/css/auth/auth.scss
@@ -10,14 +10,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: var(--spacing-sm);
 }
 
 .auth-form-actions--link {
   color: var(--link-color);
 }
 
-.auth-form--input {
-  .wt-input-info--invalid {
-    margin-bottom: var(--spacing-sm);
-  }
+.auth-form-inner {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-sm);
 }
